# temporal-networks

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  data.json  pyproject.toml
.github/workflows/: development.yml  docs_deploy.yml  release.yml  status.yml  test_release.yml
Tests/: example 1.ipynb  example 2.ipynb  test_basic_properties.py
Tests/Prepare Real test/: code.ipynb
Tests/prepare_mice_test/: mice_times.npy
docs/: conf.py  index.md
docs/_static/: custom-pst.css  custom.css
docs/content/: index.md  installation.md
example/: 01_toy_network.ipynb  01_toy_network.py  02_synthetic_network.ipynb  03_real_network.ipynb  README.rst  mice_network.ipynb  plot_01_toy_network.py  plot_02_real_network.py  plot_03_synthetic_network.py  plot_04_instantaneous_network.py  plot_04_real_network.py  speed_up_analysis.ipynb  toy_network.ipynb  updating.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_d9be303223cbfbc5_logger_py.html  z_d9be303223cbfbc5_parallel_expm_py.html  z_d9be303223cbfbc5_synth_temp_network_py.html  z_d9be303223cbfbc5_temporal_network_py.html
src/tempnet/: __init__.py  _legacy.py  expm_with_tol.py  logger.py  parallel_expm.py  sparse_stoch_mat.py  synth_temp_network.py  temporal_network.py
tests/: conftest.py  test_basic_properties.py  test_example_data.py  test_from_flow_stability.py  test_legacy_shim.py  test_parallel_expm.py  test_synth_temp_nw.py  test_temporal_network.py
tests/prepare_mice_test/: mice_1h_adjacency.npy  mice_full_adjacency.npy  mice_node_array.npy  prepare.py
