[project]
name = "tempnet"
authors = [
    {name="Alexandre Bovet", email="alexandre.bovet@uzh.ch"},
    {name="Yasaman Asgari", email="yasaman.asgari@uzh.ch"},
    {name="Jonas I. Liechti", email="j-i-l@t4d.ch"},
]
description = "A library for analyzing temporal networks."
# Relative path to the README.md file
readme = "README.md"
# Pin for an analysis (== or ~= for patching) and minimal for a package (>=)
requires-python = ">=3.10.0"
# Relative path to the license file
license.file = "LICENSE"
# Use git tags for versioning
dynamic = ["version"]

dependencies = [
    # pin (== or ~= with patches) when developing scripts, minimal (>=) for packages
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "stochmat @ git+https://github.com/bovet-research-group/stochmat.git@1.0.0-rc3",
]

[dependency-groups]
testing = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "memray>=1.19.2",
    "pytest-memray>=1.8.0",
    "ruff>=0.15.8",
]
docs = [
    "insegel>=1.3.1",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.8.0",
]
dev = [
    { include-group = "testing" },
    { include-group = "docs" },
]


[tool.coverage.run]
relative_files = true
source = ["src"]
omit = [
  "tests",
  "*__init__.py",
  "_version.py",
]

[tool.coverage.paths]
source = [
    "src/tempnet",
]

# This is for the linting with ruff
[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# T201: complain about print statements
ignore = ["T201"]

[tool.ruff.lint.per-file-ignores]
# we want to accept import violations in special contexts
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["src/tempnet"]

# (Optional to set the version also Python-style)
[tool.hatch.build.hooks.vcs]
version-file = "src/tempnet/_version.py"

# Use the git version to set the version of the package
[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = [
  "hatchling",
  "hatch-vcs",
]
build-backend = "hatchling.build"
